<resources>
    <!--CUADRO DE DIALOGO OPCIONES-->
    <string name="ElijaOpcionTXT">Cancelar tu cita</string>
    <string name="CD_Cancelar">Cancelar</string>

    <!--AGREGAR NOTA EN BASE DE DATOS-->
    <string name="Agregar_Nota_BD">Agregar</string>

    <!-- MENU PRINCIPAL-->
    <string name="BienvenidoPrincipal">Bienvenido(a)</string>
    <string name="NombresPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>
    <string name="UidPrincipal"> -- </string>

    <!-- REGISTRAR CITAS-->
    <string name="idusercitas">Uid del usuario</string>
    <string name="usercitas">Agregue su monbre completo</string>
    <string name="correousercitas">Correo de usuario</string>
    <string name="Fecha_hora_actual">Fecha y hora actual</string>
    <string name="NombreUser">Nombre completo</string>
    <string name="Titulo">Consulta, Cita</string>
    <string name="Descripcion">Describa sus cintomas...</string>
    <string name="Btn_Calendatio">Fecha para la cita</string>
    <string name="Fecha">00/00/0000</string>
    <string name="Btn_Hora">Establecer horario</string>
    <string name="Hora">00:00</string>
    <string name="Estodo">En Espera...</string>
    <string name="Btn_Enviar">Enviar</string>

    <!-- LISTAR NOTAS-->
    <string name="id_citas_item">id de cita</string>
    <string name="uidusuariocitas_item">Uid del usuario</string>
    <string name="correousuariocitas_item">Correo de usuario</string>
    <string name="hora_item">hora</string>
    <string name="titulo_item">Titulo</string>
    <string name="descripcion_item">Descripcion</string>
    <string name="fecha_item">00/00/0000</string>
    <string name="fechaHoraActual_item">00/00/0000</string>
    <string name="estodo_item">En Espera...</string>


    <string name="app_name">Medical Speed</string>
    <string name="title_active_login">BIENVENIDOS</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="Nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="login">Iniciar</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Registrarse </string>
    <string name="text_signup">¿Ya tienes una cuenta?</string>
    <string name="link_signup">Registrate</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="registrar_cita">Registrar cita</string>
    <string name="bottom_mimedico">Mi medico</string>
    <string name="bottom_misrecetas">Mis recetas</string>
    <string name="bottom_mismedicamentos">Mis medicamentos</string>
    <string name="mi_medico">MI MEDICO</string>
    <string name="mis_recetas">MIS RECETAS</string>
    <string name="mis_medicamentos">MIS MEDICAMENTOS</string>
    <string name="registrar_cita1">REGISTRAR CITA</string>
    <string name="mis_citas">MIS CITAS</string>
    <string name="ubicacion">UBICACION</string>
    <string name="iniciar_sesion"><u>Iniciar Sesion</u></string>
    <string name="terminos_y_condiciones"><u>Terminos y condiciones</u></string>
    <string name="TextoTerminos3"><b>Recopilación de información personal.</b> \n\Recopilamos información personal de nuestros usuarios cuando se registran en nuestra Aplicación movil. La información personal que podemos recopilar incluye:\n\• Nombre y apellidos.  \n\• Dirección de correo electrónico. \n\• Número de teléfono.</string>
    <string name="TextoTerminos1"><b>En MEDICAL SPEED</b>, nos comprometemos a proteger la privacidad de nuestros usuarios. Esta Política de privacidad describe Nuestras políticas y procedimientos sobre la recopilación, uso y divulgación de Su información cuando usa el Servicio y le informa sobre Sus derechos de privacidad y cómo la ley lo protege.</string>
    <string name="TextoTerminos4"><b>Uso de información personal.</b> \n\Utilizamos la información personal que recopilamos para proporcionar y mejorar nuestros servicios, para responder a preguntas y solicitudes de nuestros usuarios y para enviar información sobre actualizaciones. También podemos utilizar la información personal para fines estadísticos y de investigación de mercado.</string>
    <string name="TextoTerminos5"><b>Divulgación de información personal.</b>\n\No compartiremos la información personal de nuestros usuarios con terceros, excepto en los siguientes casos:\n\• Con autoridades legales y gubernamentales cuando sea necesario para cumplir con la ley o proteger nuestros derechos legales.</string>
    <string name="TextoTerminos6"><b>Protección de información personal.</b>\n\Tomamos medidas de seguridad razonables para proteger la información personal de nuestros usuarios, incluyendo medidas físicas, técnicas y administrativas.</string>
    <string name="TextoTerminos7"><b>Retención de información personal.</b>\n\Mantenemos la información personal de nuestros usuarios mientras sea necesaria para proporcionar nuestros servicios o cumplir con fines legales o regulatorios.</string>
    <string name="TextoTerminos8"><b>Cambios en esta Política de privacidad.</b>\n\Nos reservamos el derecho de modificar esta Política de privacidad en cualquier momento. Publicaremos cualquier cambio en esta página y, si los cambios son significativos, proporcionaremos un aviso adicional a nuestros usuarios.</string>
    <string name="TextoTerminos9"><b>Cambios en esta Política de privacidad.</b>\n\Nos reservamos el derecho de modificar esta Política de privacidad en cualquier momento. Publicaremos cualquier cambio en esta página y, si los cambios son significativos, proporcionaremos un aviso adicional a nuestros usuarios.</string>
    <string name="TextoTerminos10"><b>Contacto.</b>\n\Si tiene alguna pregunta o inquietud sobre nuestra Política de privacidad,contáctenos:\n\• Por correo electrónico: <b>eh6479@gmail.com</b>.</string>
</resources>